sistemato html e css di weather component per realizzare un layout grid efficiente

--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,17 +1,16 @@
 <div class="searchBarContainer">
-    <form [formGroup]="searchForm">
-      <input formControlName="cityName" placeholder="Cittá attuale: Null Island" type="text">
-    </form>
-  
-    <div *ngIf="cities.length > 0">
-      <h3>Select a city:</h3>
-      <ul>
-        <li *ngFor="let city of cities">
-          <button (click)="onSelectCity(city)">
-            Name: {{ city.name }} Country: {{ city.country_code }} Region: {{ city.admin1 }} Province: {{ city.admin2 }} City: {{ city.admin3 }}
-          </button>
-        </li>
-      </ul>
-    </div>
+  <form [formGroup]="searchForm">
+    <input class="search-input" formControlName="cityName" placeholder="Cerca la tua cittá" type="text">
+  </form>
+
+  <div *ngIf="cities.length > 0">
+    <h3>Scegli una cittá:</h3>
+    <ul>
+      <li *ngFor="let city of cities">
+        <button class="citySelection" (click)="onSelectCity(city)">
+          <span class="info-city">{{city.name}}, {{city.country_code}}, {{city.admin1}}</span>
+        </button>
+      </li>
+    </ul>
   </div>
-  
+</div>
