--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <!-- app.component.html -->
-  <div>
-    <app-search-bar></app-search-bar>
-    <app-weather></app-weather>
-  </div>
+
+<div class="app-container">
+  <div class="spacer-dx"></div>
+  <app-search-bar></app-search-bar>
+  <app-weather></app-weather>
+  <div class="spacer-sx"></div>
+</div>
