Modificato il weather component per recuperare e mostrare nei pulsanti di ciascun giorno una stringa con temp max e min

--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -5,7 +5,9 @@
             class="daySelector" 
             (click)="selectDay(i)"
             [class.selected]="selectedDayIndex === i">
-      {{ day.date | date: 'EEE dd/MM' }}
+      {{ day.date | date: 'EEE dd' }}
+      <br>
+      {{maxMin[i]}}
     </button>
 
     <!-- I dettagli del giorno selezionato -->
