--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -7,22 +7,24 @@
             [class.selected]="selectedDayIndex === i">
       {{ day.date | date: 'EEE dd' }}
       <br>
-        <!-- inserisci qui l'immagine e la logica di condizionamento della sua scelta in funzione della variabile dailyWeatherCodes -->
-         <img src="../../assets/01_day.png">
+      <!-- Inserito qui l'icona proveniente da severeWeatherClass -->
+      <i [class]="'wi ' + severeWeatherClass[i]"></i>
       <br>
-      {{maxMin[i]}}
+      {{ maxMin[i] }}
     </button>
 
     <!-- I dettagli del giorno selezionato -->
     <div class="dayDetails" *ngIf="selectedDayIndex !== null">
       <ul>
-        <li *ngFor="let hour of dailyWeatherData[selectedDayIndex].hourlyData">
+        <li *ngFor="let hour of dailyWeatherData[selectedDayIndex].hourlyData; let j = index">
           {{ hour.dateTime | date: 'HH:mm' }} -
           Temp: {{ hour.temperature2m }}°C,
           Umidità: {{ hour.relativeHumidity2m }}%,
           Temp Percepita: {{ hour.apparentTemperature }}°C,
           Prob Pioggia: {{ hour.precipitationProbability }}%,
           Vento: {{ hour.windSpeed10m }} km/h
+          <!-- Inserito qui l'icona proveniente da dailyWeatherClasses -->
+          <i [class]="'wi ' + dailyWeatherClasses[selectedDayIndex][j]"></i>
         </li>
       </ul>
     </div>
