--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,15 +1,16 @@
 <div class="searchBarContainer">
   <form [formGroup]="searchForm">
-    <input class="search-input" formControlName="cityName" placeholder="Cerca la tua cittá" type="text">
+    <input class="search-input" formControlName="cityName" placeholder="Cerca la tua cittá.. (ora Null Island)" type="text">
   </form>
 
-  <div *ngIf="cities.length > 0">
-    <h3>Scegli una cittá:</h3>
+  <div class="autocomplete-city" *ngIf="cities.length > 0">
     <ul>
       <li *ngFor="let city of cities">
+        <div class="size-btn-atuocomplete">
         <button class="citySelection" (click)="onSelectCity(city)">
           <span class="info-city">{{city.name}}, {{city.country_code}}, {{city.admin1}}</span>
         </button>
+      </div>
       </li>
     </ul>
   </div>
