--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-<!-- app.component.html -->
 <div class="app-container">
-  <div class="spacer-dx"></div>
-  <app-search-bar></app-search-bar>
-  <app-weather></app-weather>
-  <div class="spacer-sx"></div>
+  <div class="content-container">
+    <app-search-bar></app-search-bar>
+    <app-weather></app-weather>
+  </div>
 </div>
