--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="app-container">
   <div class="content-container">
+    <app-header></app-header>
     <app-search-bar></app-search-bar>
     <app-weather></app-weather>
+    <app-footer></app-footer>
   </div>
 </div>
