--- a/src/app/search-bar/search-bar.component.css
+++ b/src/app/search-bar/search-bar.component.css
@@ -12,7 +12,7 @@
 
 /* Stile della search bar */
 .search-input {
-    width: 100%;
+    width: 40rem;
     /* max-width: 10rem; */
     height: 3rem;
     padding-left: 1rem;
@@ -41,7 +41,7 @@
 .citySelection {
     width: 100%;
     height: 80%; /* Dimenzione fissa dell'altezza */
-    border-radius: 10px;
+    border-radius: 4px;
     box-sizing: border-box;
     margin: 0.5rem 0; /* Spaziatura inferiore e superiore */
     padding: 0.5rem; /* Padding interno per un testo centrato */
