--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,12 @@
 /* Incluso i font icons vedere anche cartelle aggiunte assets/fonts e assets/styles */
 @font-face {
     font-family: 'WeatherIcons';
-    src: url('/assets/fonts/weathericons-regular-webfont.eot');
-    src: url('/assets/fonts/weathericons-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/assets/fonts/weathericons-regular-webfont.woff2') format('woff2'),
-         url('/assets/fonts/weathericons-regular-webfont.woff') format('woff'),
-         url('/assets/fonts/weathericons-regular-webfont.ttf') format('truetype');
+    src: url('./assets/fonts/weathericons-regular-webfont.eot');
+    src: url('./assets/fonts/weathericons-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./assets/fonts/weathericons-regular-webfont.woff2') format('woff2'),
+         url('./assets/fonts/weathericons-regular-webfont.woff') format('woff'),
+         url('./assets/fonts/weathericons-regular-webfont.ttf') format('truetype');
+         /* url('/assets/fonts/weathericons-regular-webfont.ttf') format('truetype'); */
     font-weight: normal;
     font-style: normal;
   }
@@ -13,5 +14,3 @@
   html {
      font-size: 16px;
  }
- 
-  
