Creata la pagina "chi siamo", impostate le routes altri fix minori

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="app-container">
   <div class="content-container">
     <app-header></app-header>
-    <app-search-bar></app-search-bar>
-    <app-weather></app-weather>
+    
+    <!-- Qui vengono caricati i componenti dinamici in base alla rotta, grazie a router-outlet -->
+    <router-outlet></router-outlet>
+    
     <app-footer></app-footer>
   </div>
 </div>
