--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,8 +2,8 @@
     <div class="container">
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Chi siamo</a></li>
+          <li><a routerLink="/home">Home</a></li>
+          <li><a routerLink="/about">Chi siamo</a></li>
           <li><a href="#">Servizi</a></li>
           <li><a href="#">Contatti</a></li>
           <li><a href="#">Termini e condizioni</a></li>
