--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,8 @@
 <div class="header">
-    <div class="container">
+  <div class="container">
+    <a routerLink="/home" class="header-link">
       <h1>NGWeather</h1>
-      <p>La tua app per le previsioni meteo</p>
-    </div>
+    </a>
+    <p>La tua app per le previsioni meteo</p>
   </div>
-  
+</div>
