--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -5,7 +5,7 @@
     margin-top: 20em;
     border-radius: 10px;
     max-width: 800px;
-    margin: 0 auto;
+    margin-left: 22em;
     text-align: center;
   }
   
