--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-
 <app-search-bar></app-search-bar>
 <app-weather></app-weather>
 
+<!-- Header e Footer non sono necessari perché sono stati inseriti in app component insieme al router outlet che serve a gestire le rotte -->
