--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -26,7 +26,7 @@
       </ul>
       <p>
         <strong>Curiositá: </strong>
-        <a href="https://it.wikipedia.org/wiki/Null_Island" target="_blank"> <!--_blank per aprire il link in una nuova scheda-->
+        <a href="https://it.wikipedia.org/wiki/Null_Island" target="_blank">
           Null Island 
         </a>
       </p>
